--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,12 @@
   --c-1: #e7e7e6;
   --c-2: #2b2b2b;
   --c-3: #e05363;
-  --padding: 32px;
+  --spacing: 32px;
+  --a-transition: .25s;
+  --bezier: cubic-bezier(0.0, -1.00, 0.0, 1.00);;
 
   font-family: "IBM Plex Light", Helvetica, sans-serif;
+  font-size: 16px;
 
   color: var(--c-1);
 
@@ -24,32 +27,136 @@ body {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+  color: var(--c-1);
+}
+a::after {
+  position: relative;
+  display: block;
+  content: "";
+  height: 1px;
+  bottom: 0px;
+
+  margin: 0 auto;
+  right: 0;
+  width: 0%;
+  background: var(--c-1);
+
+  -o-transition: var(--a-transition) var(--bezier);
+  -ms-transition: var(--a-transition) var(--bezier);
+  -moz-transition: var(--a-transition) var(--bezier);
+  -webkit-transition: var(--a-transition) var(--bezier);
+  transition: var(--a-transition) var(--bezier);
+}
+a:hover:after {
+  width: 120%;
+  right: 10%;
+
+  -o-transition: var(--a-transition) var(--bezier);
+  -ms-transition: var(--a-transition) var(--bezier);
+  -moz-transition: var(--a-transition) var(--bezier);
+  -webkit-transition: var(--a-transition) var(--bezier);
+  transition: var(--a-transition) var(--bezier);
+}
+
+.toc {
+  position: fixed;
+  right: calc(var(--spacing) * 2);
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10;
+  mix-blend-mode: difference;
+  text-align: right;
+}
+.toc li {
+  list-style-type: none;
+  line-height: 1.75;
+}
+.toc > ul > li.current {
+  transform: translate(-50%, 0%);
+}
+.toc > ul > span.current-line {
+  width: 16px;
+  height: 2px;
+  margin-top: 14px;
+  right: 0;
+  position: absolute;
+  content: "";
+  background-color: var(--c-3);
+  mix-blend-mode: normal;
+}
+h1.title {
+  font-size: 5rem;
+  line-height: 1;
+}
+
 p {
   font-family: "IBM Plex Light";
 }
 
-.container {
+span.highlighted {
+  background-color: var(--c-3);
+}
+
+.hero {
+  height: 101vh;
+}
+
+.hero-caption {
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+}
+
+.text-section {
   width: 100%;
-  max-width: 960px;
+  background-color: var(--c-1);
+}
+
+.flex-container {
+  width: 100%;
+  /* max-width: 960px; */
   position: relative;
   margin: 0 auto;
   box-sizing: border-box;
 
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: space-around;
 
-  padding: var(--padding);
+  padding: var(--spacing);
 }
 
-.grid-4 {
-  position: relative;
+.flex-text {
+  display: flex;
+  margin-top: calc(var(--spacing) * 2);
+  max-width: 860px;
 }
 
-.grid-2 {
-  position: relative;
+.text-section .flex-text {
+  color: var(--c-2);
 }
 
-.grid-1 {
+.flex-child {
+  width: 100%;
+}
+
+.graph-container {
+  /* background-color: var(--c-2); */
+  margin: calc(var(--spacing) * 1) auto 0 auto;
+  width: 100%;
+}
+
+#map-percentage {
+  color: var(--c-2);
+  font-size: 3.5rem;
+  margin: 0 auto;
+}
+
+#main-question {
   position: relative;
+  margin-top: 50%;
+  text-align: center;
 }
