--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,8 @@
   -webkit-font-feature-settings: "kern" on;
   -ms-font-feature-settings: "kern" on;
   -o-font-feature-settings: "kern" on;
+
+  --dot-size: 50px;
 }
 
 html,
@@ -31,6 +33,7 @@ a {
   text-decoration: none;
   color: var(--c-1);
 }
+
 /* a::after {
   position: relative;
   display: block;
@@ -180,3 +183,5 @@ span.highlighted {
     right: calc(var(--spacing) * 0);
   }
 }
+
+/* La parte di Nic */
