--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ body {
   background-color: var(--c-2);
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 a {
@@ -68,8 +69,7 @@ a:hover:after {
   z-index: 10;
   mix-blend-mode: difference;
   text-align: right;
-  transition: all calc(var(--a-transition)/1) ease-out;
-
+  transition: all calc(var(--a-transition) / 1) ease-out;
 }
 .toc li {
   list-style-type: none;
@@ -118,6 +118,7 @@ span.highlighted {
 .text-section {
   width: 100%;
   background-color: var(--c-1);
+  margin: 0;
 }
 
 .flex-container {
@@ -149,27 +150,51 @@ span.highlighted {
 }
 
 .graph-container {
-  /* background-color: var(--c-2); */
   margin: calc(var(--spacing) * 1) auto 0 auto;
   width: 100%;
+  display: block;
+}
+
+#section-1 {
+  transition: background-color var(--a-transition) ease-out;
 }
 
 #map-percentage {
   color: var(--c-2);
   font-size: 3.5rem;
   margin: 0 auto;
-}
-
-#waveform {
-  height: 250px;
-  width: 100%;
-  border: solid 1px var(--c-3);
-  margin: 0 auto var(--spacing) auto;
+  text-align: center;
+  display: block;
 }
 
 #main-question {
-  position: relative;
-  text-align: center;
+  color: var(--c-2);
+  margin: 0 auto;
+}
+
+#waveform {
+  height: 150px;
+  width: 350px;
+  border: solid 0.5px var(--c-3);
+  margin: 0 auto var(--spacing) auto;
+  display: block;
+  box-sizing: border-box;
+}
+
+.bg.dark {
+  background-color: var(--c-2);
+}
+.dark {
+  color: var(--c-1);
+}
+
+.undefined-graph {
+  display: block;
+  margin: 0 auto;
+  max-width: 720px;
+  background-image: url("graphs/graph_1-map_texture.png");
+  background-repeat: repeat;
+  background-size: 10px;
 }
 
 @media (max-width: 960px) {
