--- a/src/font.css
+++ b/src/font.css
@@ -5,7 +5,12 @@
 
 @font-face {
     font-family: 'IBM Plex Light';
-    src: url('fonts/IBM-Plex-Sans/IBMPlexSans-Light.woff2') format('Woff2');
+    src: url('fonts/IBM-Plex-Sans/IBMPlexSans-Regular.woff2') format('Woff2');
+}
+
+@font-face {
+    font-family: 'IBM Plex Mono';
+    src: url('fonts/IBM-Plex-mono/IBMPlexMono-Regular.woff2') format('Woff2');
 }
 
 @font-face {
