--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ a {
 }
 .toc.summon {
   right: calc(var(--spacing) * 2);
-  padding: calc(var(--spacing) / 1.5);
+  padding: calc(var(--spacing) * 0);
   /* padding-right: calc(var(--spacing)*2); */
 }
 .toc li {
@@ -68,19 +68,23 @@ span#current-line {
   height: 3px;
   margin-top: 10px;
   top: 50%;
-  right: calc(var(--spacing) / 2);
+  right: calc(var(--spacing) * 0);
   position: fixed;
   /* content: ""; */
   background-color: var(--c-3);
   mix-blend-mode: normal;
   transform: rotateZ(90deg);
   transition: transform var(--a-transition) ease-out,
-              top var(--a-transition) ease-out;
+    top var(--a-transition) ease-out;
 }
 span#current-line.active {
   transform: rotateZ(0deg) translate(-100%, -0%);
   transition: transform var(--a-transition) ease-out,
-              top var(--a-transition) ease-out;
+    top var(--a-transition) ease-out;
+}
+
+h1 {
+  margin-top: 8px;
 }
 
 h1.title {
@@ -161,9 +165,29 @@ p .highlighted {
 }
 
 .graph-container {
-  margin: calc(var(--spacing) * 1) auto 0 auto;
+  width: 100%;
+  box-sizing: border-box;
+  margin: calc(var(--spacing) * 1) auto calc(var(--spacing) * 3) auto;
+  /* padding: 0 calc(var(--spacing) * 2); */
+  display: inline-block;
+}
+
+.source-container {
+  /* max-width: 860px; */
   width: 100%;
   display: block;
+  text-align: left;
+}
+.source-text {
+  color: var(--c-2);
+  display: block;
+  text-align: left;
+  margin: var(--spacing) auto 0 auto;
+}
+
+.more-info {
+  color: var(--c-1);
+  cursor: help;
 }
 
 #section-1 {
@@ -172,10 +196,10 @@ p .highlighted {
 
 #map-percentage {
   color: var(--c-2);
-  font-size: 3.5rem;
-  margin: 0 auto;
+  font-size: 2rem;
+  /* margin: 0 auto; */
   text-align: center;
-  display: block;
+  display: inline;
 }
 
 #main-question {
@@ -184,7 +208,7 @@ p .highlighted {
 }
 
 #waveform {
-  height: 150px;
+  height: 100px;
   width: 350px;
   border: solid 0.5px var(--c-3);
   margin: 0 auto var(--spacing) auto;
