--- a/src/hatebase.css
+++ b/src/hatebase.css
@@ -27,6 +27,10 @@ h1.title {
     line-height: 1.4;
 }
 
+.tooltip-content {
+    color: blue;
+}
+
 .dot {
     height: var(--dot-size);
     width: var(--dot-size);
@@ -61,16 +65,15 @@ h1.title {
 
 .dot.on {
     transition: background-color calc(var(--a-transition)/1.5) cubic-bezier(.65, 0, .15, 1),
-        transform calc(var(--a-transition)/1.5) cubic-bezier(.65, 0, .15, 1);
+                transform calc(var(--a-transition)/1.5) cubic-bezier(.65, 0, .15, 1);
     transition-duration: .35s;
 
-    /* border: 1px solid blue; */
+    background-color: blue; */
+    opacity: 1;
 
-    /* background-color: blue; */
-    /* #e05363; */
-    /* opacity: .9; */
+    /* border: 1px solid blue; */
     /* transform: scale(1.2); */
-    z-index: 10;
+    z-index: 100;
 }
 
 .dot.onn {
@@ -80,7 +83,7 @@ h1.title {
     /* border: 1px solid #e05363; */
     /* background-color: rgba(224, 83, 99, .8); */
     background-color: blue;
-    opacity: .6;
+    opacity: .7;
     z-index: 10;
 }
 
@@ -154,5 +157,6 @@ h1.title {
     top: 50%;
     display: block;
     margin: auto;
-    width: 65%;
+    width: 100
+    %;
 }
