Added IBM Plex Serif, now using as h1 default font; embedded hate words interaction; better CSS handling

--- a/src/font.css
+++ b/src/font.css
@@ -12,3 +12,8 @@
     font-family: 'IBM Plex Mono';
     src: url('fonts/IBM-Plex-Mono/IBMPlexMono-Regular.woff2') format('Woff2');
 }
+
+@font-face {
+    font-family: 'IBM Plex Serif';
+    src: url('fonts/IBM-Plex-Serif/IBMPlexSerif-Bold.woff2') format('Woff2');
+}
