--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,12 @@
 :root {
-  --c-1: #e7e7e6;
-  --c-2: #2b2b2b;
-  --c-3: #e05363;
+  --c-1: #fff;
+  --c-2: #0033ff;
+  --c-3: #f2c005;
+  --focus: #1a1a1a;
   --spacing: 32px;
   --a-transition: 0.25s;
   --bezier: cubic-bezier(0, -1, 0, 1);
+  --border: solid 2px;
 
   font-family: "IBM Plex Light", Helvetica, sans-serif;
   font-size: 16px;
@@ -30,16 +32,14 @@ body {
   box-sizing: border-box;
 }
 
-a {
-  text-decoration: none;
-  color: var(--c-1);
-}
+/*        INIZIO        */
+/*     MENU LATERALE    */
 
 .toc {
   position: fixed;
   right: calc(var(--spacing) * 1);
   top: 50%;
-  right: -20vw;
+  right: -50vw;
   /* background-color: var(--c-2); */
   transform: translate(-0%, -50%);
   z-index: 10;
@@ -53,17 +53,20 @@ a {
   padding: calc(var(--spacing) * 0);
   /* padding-right: calc(var(--spacing)*2); */
 }
-.toc li {
+.toc > ul > li {
   list-style-type: none;
   line-height: 1.75;
   margin-bottom: 10px;
   line-height: 1.2;
+  transform: translate(0, 0);
+  transition: transform var(--a-transition) var(--bezier);
+}
+.toc > ul > li.current {
+  /* transform: translate(-16px, 0); */
+  transition: transform var(--a-transition) var(--bezier);
 }
 .toc a {
   display: block;
-}
-.toc > ul > li.current {
-  /* transform: translate(-50%, 0%); */
 }
 span#current-line {
   width: 24px;
@@ -85,8 +88,24 @@ span#current-line.active {
     top var(--a-transition) ease-out;
 }
 
+/*     MENU LATERALE    */
+/*         FINE         */
+
+h1, h2, p, span {
+  margin: 0;
+}
 h1 {
-  margin-top: 8px;
+  font-family: "IBM Plex Serif";
+}
+h2 {
+  font-size: 1.2rem;
+}
+p {
+  font-family: "IBM Plex Light";
+}
+a {
+  text-decoration: none;
+  color: var(--c-1);
 }
 
 h1.title {
@@ -94,22 +113,23 @@ h1.title {
   line-height: 1;
 }
 
-p {
-  font-family: "IBM Plex Light";
-}
-
 span.highlighted {
   background-color: var(--c-3);
   padding: 0px 3px;
 }
-p .highlighted {
-  font-family: "IBM Plex";
+
+svg {
+  display: block;
+  margin: 0 auto;
+  width: 90%;
+  max-height: 90vh;
 }
 
 .hero {
-  height: 101vh;
+  height: 100vh;
+  color: var(--c-1);
+  background-color: var(--c-2);
 }
-
 .hero-caption {
   position: absolute;
   top: 50%;
@@ -117,61 +137,170 @@ p .highlighted {
   transform: translate(-50%, -50%);
 }
 
-.text-section {
+.narrative-section {
   width: 100%;
   background-color: var(--c-1);
-  margin: 0;
-}
-
-.text-section.dark {
-  background-color: var(--c-2);
-}
-.text-section.dark .flex-text {
-  color: var(--c-1);
-}
-
-.bg.dark {
-  background-color: var(--c-2);
-}
-.dark {
-  color: var(--c-1);
-}
-
-.container {
-  width: 100%;
-  max-width: 960px;
-  position: relative;
-  margin: 0 auto;
-  box-sizing: border-box;
-
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-
   padding: var(--spacing);
+  box-sizing: border-box;
+  overflow: visible;
+}
+.narrative-section.dark {
+  background-color: var(--c-2);
+}
+.narrative-section.dark  {
+  color: var(--c-1);
 }
 
-.flex-text {
-  display: flex;
-  margin-top: calc(var(--spacing) * 2);
-  max-width: 860px;
-}
-
-.text-section .flex-text {
+.section-heading {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  box-sizing: border-box;
   color: var(--c-2);
+  margin: calc(var(--spacing) * 2) auto calc(var(--spacing) * 1) auto;
+  max-width: 960px;
+}
+.section-title,
+.section-paragraph {
+  box-sizing: border-box;
+}
+.section-heading h1 {
+  padding: 10px;
+  z-index: 10;
+  /* border: solid 2px var(--c-2); */
+}
+.section-heading p {
+  z-index: 5;
+  padding: calc(var(--spacing) / 2);
+  border: var(--border) var(--c-2);
+  margin-left: -2px;
+}
+.section-heading h2 {
+  z-index: 8;
+  padding: calc(var(--spacing) / 3);
+  background-color: var(--c-1);
+  border: var(--border) var(--c-2);
 }
 
-.flex-child {
-  width: 100%;
-  margin-right: calc(var(--spacing) / 1.5);
+.section-heading.sub {
+  /* inherits from section-heading */
+  grid-template-columns: 1fr;
+  margin: calc(var(--spacing) * 1) 
+          auto 
+          calc(var(--spacing) * 1) 
+          auto; 
+}
+.section-heading.sub .section-title {
+  z-index: 10;
+}
+.section-heading.sub .section-title h2 {
+  display: inline-block;
+}
+.section-heading.sub .section-paragraph {
+  z-index: 5;
+}
+.section-heading.sub .section-paragraph p {
+  margin-left: 24px;
+  margin-top: -12px;
+  max-width: 450px;
+  background-color: var(--c-1);
+}
+
+.section-title.sub.highlighted h2 {
+  color: var(--c-1);
+  background-color: var(--c-2);
+}
+
+.narrative-section.focus {
+  background-color: var(--focus);
+}
+.section-heading.focus {
+  /* inherits from section-heading */
+  color: var(--c-1);
+  border-color: var(--focus) !important;
+  grid-template-columns: 1fr;
+  margin: calc(var(--spacing) * 1) 
+          auto 
+          calc(var(--spacing) * 1) 
+          auto; 
+}
+.section-heading.focus .section-title {
+  z-index: 10;
+}
+.section-heading.focus .section-title h2 {
+  display: inline-block;
+  background-color: var(--c-1);
+  border: var(--border) var(--c-1);
+  color: var(--focus);
+}
+.section-heading.focus .section-paragraph {
+  z-index: 5;
+}
+.section-heading.focus .section-paragraph p {
+  margin-left: 24px;
+  margin-top: -12px;
+  max-width: 450px;
+  color: var(--c-1);
+  border: var(--border) var(--c-1);
+}
+.section-title.focus.highlighted h2 {
+  color: var(--c-1);
+  background-color: var(--c-2);
+}
+
+
+
+
+.section-heading.dark .section-title {
+  z-index: 10;
+}
+.section-heading.dark .section-title h2 {
+  display: inline-block;
+  /* background-color: var(--c-2); */
+  border: var(--border) var(--c-1);
+  /* color: var(--c-1); */
+}
+.section-heading.dark .section-paragraph {
+  z-index: 5;
+}
+.section-heading.dark .section-paragraph p {
+  margin-left: 24px;
+  margin-top: -12px;
+  max-width: 450px;
+  color: var(--c-1);
+  border: var(--border) var(--c-1);
+  background-color: var(--c-2)
+}
+.section-title.dark.highlighted h2 {
+  color: var(--c-2);
+  background-color: var(--c-1);
+}
+
+
+
+
+.narrative-section.dark .section-title {
+  color: var(--c-1);
+}
+
+
+.dark {
+  border-color: var(--c-1) !important;
+  color: var(--c-1);
 }
 
 .graph-container {
   width: 100%;
   box-sizing: border-box;
-  margin: calc(var(--spacing) * 1) auto calc(var(--spacing) * 3) auto;
-  /* padding: 0 calc(var(--spacing) * 2); */
   display: inline-block;
+  margin: calc(var(--spacing) * 2) 
+          auto 
+          calc(var(--spacing) * 1) 
+          auto;
+}
+.graph {
+  position: relative;
+  margin: 0 auto;
 }
 
 .source-container {
@@ -196,14 +325,6 @@ p .highlighted {
   transition: background-color var(--a-transition) ease-out;
 }
 
-#map-percentage {
-  color: var(--c-2);
-  font-size: 2rem;
-  /* margin: 0 auto; */
-  text-align: center;
-  display: inline;
-}
-
 #main-question {
   color: var(--c-2);
   margin: 0 auto;
@@ -217,6 +338,24 @@ p .highlighted {
   box-sizing: border-box;
 }
 
+#section-policies {
+  grid-template-columns: 1fr;
+  top: 50%;
+  transform: translate(0%, -50%);
+  margin-top: 0;
+}
+#sns {
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+  margin: calc(var(--spacing)*1) auto;
+  height: 75%;
+  max-width: 860px;
+}
+
+
+
 .undefined-graph {
   display: block;
   margin: 0 auto;
@@ -226,51 +365,6 @@ p .highlighted {
   background-size: 10px;
 }
 
-/*                              */
-/*      NEW LAYOUT CLASSES      */
-/*                              */
-
-.section-wrapper {
-  width: 100%;
-  background-color: var(--c-1);
-}
-.section-container {
-  display: grid;
-  grid-gap: 80px;
-  max-width: 1280px;
-  height: 100vh;
-  color: var(--c-2);
-  margin: auto auto;
-  padding: var(--spacing);
-}
-.section-container.col-1-2 {
-  grid-template-columns: 1fr 2fr;
-}
-.section-container.col-2-1 {
-  grid-template-columns: 2fr 1fr;
-}
-.section-container.col-1 {
-  grid-template-columns: 1fr;
-}
-
-.section-text {
-  display: inline;
-  position: relative;
-  max-width: 860px;
-  margin: auto auto;
-}
-
-.section-graph {
-  position: relative;
-  margin: auto auto;
-}
-
-.graph {
-  display: inline;
-  position: relative;
-  margin: 0 auto;
-  /* transform: translate(0, -50%); */
-}
 
 @media (max-width: 1024px) {
   .toc {
@@ -279,17 +373,14 @@ p .highlighted {
   .toc.summon {
     right: calc(var(--spacing) * 2);
   }
-  .section-container {
-    grid-template-columns: 1fr;
-  }
-  .section-container.col-1-2 {
+  .section-heading {
     display: block;
-  }
-  .section-text {
-    display: block;
-    margin: 20 20;
+    margin: var(--spacing);
     max-width: 500px;
     text-align: left;
+  }
+  .section-paragraph {
+    margin: 0 calc(var(--spacing) * 2);
   }
   .section-graph {
     display: block;
