--- a/src/percentage.css
+++ b/src/percentage.css
@@ -3,18 +3,23 @@
     --coefficent: 1.5;
 }
 
+/* ------- cursore ------ */
+.social-label {
+    cursor: pointer;
+}
+
 #fb-text, #tw-text, #yt-text{
     fill: white;
 }
 
 #fb-box, #tw-box, #yt-box {
-    fill: none;
+    fill: var(--c-2);
     transition: fill, stroke calc(var(--timing))/var(--coefficent) cubic-bezier(.65, 0, .15, 1);
 }
 
 #fb-text.blue-text, #tw-text.blue-text, #yt-text.blue-text {
-    fill: blue;
-    stroke: blue;
+    fill: var(--c-2);
+    stroke: var(--c-2);
     transition: fill calc(var(--timing)/var(--coefficent)) cubic-bezier(.65, 0, .15, 1);
 }
 
@@ -36,11 +41,12 @@
 /* ------ COLONNE DI SNAP.SVG ------ */
 
 .white-column {
-
+    
 }
 
 .red-column {
-    
+    opacity:0.7;
+    fill:#CE3B19;
 }
 
 /* ------ SVG ------ */
@@ -49,7 +55,6 @@
 .social-label {fill: #FFFFFF;}
 .white-el{fill:#FFFFFF;}
 .percentages-font{font-family:'IBM Plex Mono'; font-size:20px;}
-.red-column{opacity:0.7;fill:#CE3B19;}
 .line-values{fill:none;stroke:#FFFFFF;stroke-width:0.5;stroke-miterlimit:10;}
 .useless-class{fill:none;}
 .red-numbers{fill:#CE3B19;}
