--- a/src/categories_graph.css
+++ b/src/categories_graph.css
@@ -7,7 +7,7 @@
     font-family: 'IBM Plex Mono';
     font-size: 17.9419px;
     
-    cursor: url('assets/new-hand-blue-32-2.png'), auto;
+    cursor: url('assets/new-hand-blue-16.png'), auto;
 }
 .social-disappear{
     opacity: .1;
