--- a/src/categories_graph.css
+++ b/src/categories_graph.css
@@ -1,13 +1,10 @@
-/* * {
-    cursor: url('assets/new-hand-blue-32.png'), auto;
-} */
-
 .testi {
     fill: #FFFFFF;
     font-family: 'IBM Plex Mono';
     font-size: 17.9419px;
     
-    cursor: url('assets/new-hand-blue-16.png'), auto;
+    /* cursor: url('assets/dot-32-hd.png') 50 50, auto; */
+    cursor: url('assets/arrow-32-hd.png'), auto;
 }
 .social-disappear{
     opacity: .1;
