--- a/src/categories_alluvial.css
+++ b/src/categories_alluvial.css
@@ -20,6 +20,12 @@ body {
     opacity:0.5;
     fill:none;
     stroke:#0000FF;
+    cursor: url('assets/arrow-32-hd.png'), auto;
+    
+}
+
+.texts {
+    cursor: url('assets/arrow-32-hd.png'), auto;
 }
 
 .stroke0{stroke-width:31.1866;}
