--- a/src/percentage.css
+++ b/src/percentage.css
@@ -5,7 +5,7 @@
 
 /* ------- cursore ------ */
 .social-label {
-    cursor: pointer;
+     cursor: url('assets/dot-32-hd-small.png') 20 20, auto;
 }
 
 #fb-text, #tw-text, #yt-text{
