--- a/src/style.css
+++ b/src/style.css
@@ -40,43 +40,53 @@ body {
 
 .toc {
   position: fixed;
-  right: calc(var(--spacing) * 1);
   top: 50%;
   right: -50vw;
-  /* background-color: var(--c-2); */
+  background-color: var(--c-2);
   transform: translate(-0%, -50%);
   z-index: 20;
-  mix-blend-mode: difference;
   text-align: right;
   transition: all calc(var(--a-transition) / 1) ease-out;
-  max-width: calc(var(--max-width) / 3);
+  max-width: calc(var(--max-width) / 1);
+  margin: calc(var(--spacing) / 2);
+  border: solid 1px var(--c-1);
 }
 .toc.summon {
   right: calc(var(--spacing) * 2);
   padding: calc(var(--spacing) * 0);
   /* padding-right: calc(var(--spacing)*2); */
 }
+.toc > ul {
+  padding: calc(var(--spacing) / 2) calc(var(--spacing) / 2) calc(var(--spacing) / 2) var(--spacing) ;
+  margin: 0;
+}
 .toc > ul > li {
   list-style-type: none;
-  line-height: 1.75;
-  margin-bottom: 10px;
-  line-height: 1.2;
+  margin-bottom: 0;
   transform: translate(0, 0);
   transition: transform var(--a-transition) var(--bezier);
 }
 .toc > ul > li.current {
   /* transform: translate(-16px, 0); */
   transition: transform var(--a-transition) var(--bezier);
+  background-color: var(--c-2);
+  color: var(--c-2);
 }
 .toc a {
   display: block;
+  padding: calc(var(--spacing) / 8) 0;
+  transition: transform var(--a-transition) var(--bezier);
+}
+.toc a:hover {
+  transform: translateX(calc(var(--spacing) / -2));
+  transition: transform var(--a-transition) var(--bezier);
 }
 span#current-line {
   width: 24px;
   height: 3px;
   margin-top: 10px;
   top: 50%;
-  right: calc(var(--spacing) * 0);
+  right: calc(var(--spacing) * 0.25);
   position: fixed;
   z-index: 999;
   background-color: var(--c-3);
@@ -414,7 +424,7 @@ svg {
     --spacing: 24px;
   }
   .toc {
-    right: -400px;
+    /* right: -400px; */
   }
   .toc.summon {
     right: calc(var(--spacing) * 2);
